<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/remind_time_has_been_set"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textViewTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="" />

        <Button
            android:id="@+id/button_remove_remind"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_centerHorizontal="true"
            android:text="@string/remove_remind" />

        <Button
            android:id="@+id/button_reset_remind"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            android:layout_centerHorizontal="true"
            android:text="@string/reset" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:layout_centerHorizontal="true"
            android:text="@string/cancel" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>