<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="18sp"
            android:textColor="@color/blue_76"
            android:background="@color/transparent"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_remind"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/button_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/finish"
            android:textSize="18sp"
            android:textColor="@color/blue_76"
            android:background="@color/transparent"

            android:layout_marginEnd="15dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="260dp"
            tools:layout_editor_absoluteY="41dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_centerHorizontal="true"
            android:text="@string/input_20yy_mm_dd_hh_mm" />

        <EditText
            android:id="@+id/editTextTime"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="130dp"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="time"
            android:hint="@string/_20yy_mm_dd_hh_mm"
            android:autofillHints="@string/_20yy_mm_dd_hh_mm"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="112dp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>