<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modify_type_to"
            android:textColor="#000000"
            android:textSize="19sp"
            android:gravity="center" />

        <ScrollView
            android:id="@+id/ScrollView"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_marginTop="5dp"
            android:fillViewport="true"
            android:contentDescription="@string/type" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:orientation="vertical"
                android:paddingLeft="0dp"
                android:paddingRight="0dp">

                <LinearLayout
                    android:id="@+id/note_buttons_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp" />
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/button_new_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/new_type"
            android:textSize="19sp"
            android:textColor="@color/blue_76"
            android:background="@color/transparent"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>